--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PetPalPlaces"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.screens.preview.PlacePreviewActivity"
+            android:exported="false"
+            android:label="@string/title_activity_place_preview"
+            android:theme="@style/Theme.PetPalPlaces" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
