almost finished, need to pulish some UI things but this is almost ok.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,10 @@ dependencies {
     // Accompanist
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.28.0"
 
+    // Constraint Layout
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
