Finished the header.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,11 +27,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_17.toString()
     }
     buildFeatures {
         compose true
@@ -64,13 +64,11 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.30.1"
     implementation platform('androidx.compose:compose-bom:2022.10.00')
 
-
     // Constraint Layout
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
     //Coil
     implementation("io.coil-kt:coil-compose:2.4.0")
-
 
     //ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
